--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
 </head>
 <body>
     <div class="terrain">
-        <h1 class="align-left">UnblockMe</h1>
-        <h2 class="align-left">by LeFredy</h2>
+        <h1 id="title">UnblockMe</h1>
+        <p id="author">by LeFredy</p>
+        <img src="/assets/v2/cropped/Block_Main_x4.png" class="block horizontal" row="3" id="main-block">
+        <img src="/assets/v2/cropped/Block_HBig_x4.png" class="block horizontal" row="1" style="left: 128px;">
+        <img src="/assets/v2/cropped/Block_HSmall_x4.png" class="block horizontal" row="6" style="left: 0px;">
+        <img src="/assets/v2/cropped/Block_VBig_x4.png" class="block vertical" col="3" style="top: 192px;">
+        <img src="/assets/v2/cropped/Block_VSmall_x4.png" class="block vertical" col="2" style="top: 0px;">
+        <img src="/assets/v2/cropped/Block_VSmall_x4.png" class="block vertical" col="6" style="top: 0px;">
+        <img src="/assets/v2/cropped/Block_VSmall_x4.png" class="block vertical" col="6" style="top: 192px;">
+        <img src="/assets/v2/cropped/Block_HSmall_x4.png" class="block horizontal" row="2" style="left: 128px;">
+        <img src="/assets/v2/cropped/Block_HSmall_x4.png" class="block horizontal" row="5" style="left: 192px;">
+        <img src="/assets/v2/cropped/Block_HBig_x4.png" class="block horizontal" row="6" style="left: 192px;">
         <div class="button-pusher">
-            <button class="A expand"><img src="/assets/v2/cropped/Icon_Play_x4.png" alt="play" class="icon"></button>
+            <button class="A expand" id="start"><img src="/assets/v2/cropped/Icon_Play_x4.png" alt="play" class="icon"></button>
         </div>
     </div>
 </body>
